# GEM_Screening

./: .env  .gitignore  pyproject.toml
gem_screening/: __init__.py  config.py  main.py  pipeline.py  serializers.py  settings.txt  well_classes.py  well_module.py
gem_screening/logger/: __init__.py
gem_screening/main_gui/: __init__.py  controls_panel.py  main_display.py  main_window.py  mock_pipeline_runner.py
gem_screening/main_gui/controls/: calib_af_checkboxes.py  experiment_folder_selector.py  settings_process_buttons.py  timestamp_suffix_editor.py
gem_screening/settings/: models.py  settings.py
gem_screening/settings/gui/: __init__.py  main_window.py  run_gui.py
gem_screening/settings/gui/pages/: __init__.py  acquisition_page.py  control_page.py  dish_page.py  logging_page.py  measure_page.py  server_page.py  stim_page.py  well_selection_widget.py
gem_screening/tasks/: data_intensity.py  image_capture.py  initialization.py  injection.py  light_stimulation.py  mask_utils.py  pipeline_workflows.py  rescue_assessment.py  rescue_utils.py  tune_seg_gui.py  tune_segmentation.py  workflows.py  workflows_utils.py
gem_screening/utils/: client.py  env_loader.py  external.py  filesystem.py  identifiers.py  network.py  pipeline_constants.py  prompt_gui.py  prompts.py  serializers.py
gem_screening/utils/client/: __init__.py  cleanup.py  client.py  mask_registration.py  models.py  progress.py  service.py
gem_screening/utils/settings/: models.py  settings.py
gem_screening/well_data/: well_classes.py
tests/: test_run_rescue_flow.py
