[project]
name = "gem-screening"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Benoit Roux", email = "benoit.roux@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "a1-manager",
    "celltinder",
    "cp-server",
    "dotenv>=0.9.9",
    "progress-bar",
    "pydantic>=2.11.6",
]

[project.scripts]
gem-screening = "gem_screening:pipeline"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
a1-manager = { path = "../A1_manager", editable = true }
celltinder = { path = "../CellTinder", editable = true }
progress-bar = { path = "../Progress_bar", editable = true }
cp-server = { path = "../CP_server", editable = true }
