[project]
name = "gem-screening"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Benoit Roux", email = "benoit.roux@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "a1-manager",
    "celltinder",
    "cp-server",
    "progress-bar",
    "pydantic>=2.11.6",
    "pyqt6>=6.9.1",
]

[project.scripts]
gem-screening = "gem_screening:pipeline"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
a1-manager = { workspace = true }
celltinder = { workspace = true }
progress-bar = { workspace = true }
cp-server = { workspace = true }
