[project]
name = "gem-screening"
version = "1.3.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Benoit Roux", email = "benoit.roux@gmail.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "a1-manager",
    "celltinder",
    "cp-server",
    "progress-bar",
    "pydantic>=2.11.6",
    "pyqt6>=6.9.1",
]

[project.scripts]
gem-screening = "gem_screening:pipeline"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
